--- a/src/client/style.css
+++ b/src/client/style.css
@@ -237,6 +237,7 @@ body {
 
 #otp-widgetManager {
     float: right;
+    display:none;
     width: 30px;
     height: 30px;
     margin: 10px 10px 0 0;
