--- a/src/client/style.css
+++ b/src/client/style.css
@@ -1164,4 +1164,7 @@ p#splash-text span {
 .ui-resizable-handle.ui-resizable-se.ui-icon.ui-icon-gripsmall-diagonal-se {
   display: none !important;
 }
+div#otp-minimize-tray {
+  display: none !important;
+}
 }
