--- a/src/client/style.css
+++ b/src/client/style.css
@@ -1176,3 +1176,46 @@ div#otp-minimize-tray {
   display: none !important;
 }
 }
+
+.splide
+{
+  z-index: 999;
+  background: rgba(50,50,50,0.35);
+}
+#containsplide {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 200px;
+  z-index: 998;
+}
+.splide__slide img {
+  display: inherit;
+}
+.splide__slide
+{
+  background-color: rgba(255,255,255,0.5);
+  margin-left: 5px !important;
+  margin-right: 5px !important;
+  text-align: center;
+}
+.splide__slide a {
+  text-align: center;
+  color: black;
+  text-decoration: none;
+  padding: 5px;
+  font-size: 1.2em;
+}
+
+.splide__slide img {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.splide-title {
+  font-size: 3em;
+  text-align: right;
+}
+.splide__slide {
+  cursor: pointer;
+}
