--- a/src/client/style.css
+++ b/src/client/style.css
@@ -1199,9 +1199,13 @@ p#splash-text span {
   right: 0;
   left: 0;
   z-index: 998;
+  text-align: center;
 }
 .splide__slide img {
   display: inherit;
+}
+.splide__track {
+  border-top: 1px solid #fff;
 }
 .splide__slide
 {
@@ -1224,8 +1228,15 @@ p#splash-text span {
   margin-right: auto;
 }
 .splide-title {
-  font-size: 3em;
+  font-size: 1.5em;
   text-align: right;
+  cursor: pointer;
+  display: inline-block;
+  background-color: rgba(255,255,255,0.65);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding:10px;
+  border: 1px solid #ccc;
 }
 .splide__slide {
   cursor: pointer;
